--- a/work.html
+++ b/work.html
@@ -22,7 +22,12 @@
         <a class="active" href="work.html">Work</a>
         </nav>
     </div>
-    
+    <div class="grid-imgs">
+        <img class="grid-img1" src="images/pawel-czerwinski-8uZPynIu-rQ-unsplash.jpg" alt="abstract">
+        <img class="grid-img2" src="images/pawel-bukowski-neHxvGWsJws-unsplash.jpg" alt="abstract">
+        <img class="grid-img2" src="images/pawel-czerwinski-8uZPynIu-rQ-unsplash.jpg" alt="abstract">
+        <img class="grid-img1" src="images/pawel-bukowski-neHxvGWsJws-unsplash.jpg" alt="abstract">
+    </div>
     <footer>
         <svg class="social-icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 159.38 159.38"><defs><style>.cls-1{fill:#193c69;}.cls-2{fill:#cf828f;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Layer_2-2" data-name="Layer 2"><ellipse class="cls-1" cx="101.68" cy="58.14" rx="2.49" ry="2.4"/><a xlink:href="https://instagram.com"><path class="cls-2" d="M80,63.11A17.08,17.08,0,1,0,97,80.19,17.06,17.06,0,0,0,80,63.11Zm.09,29.3A12.44,12.44,0,1,1,92.49,80,12.44,12.44,0,0,1,80.06,92.41Z"/><path class="cls-2" d="M101.93,56.66A1.29,1.29,0,1,0,103.22,58,1.29,1.29,0,0,0,101.93,56.66Z"/><path class="cls-2" d="M79.69,0a79.69,79.69,0,1,0,79.69,79.69A79.69,79.69,0,0,0,79.69,0Zm38.63,96a21.77,21.77,0,0,1-21.71,21.71H63.36A21.77,21.77,0,0,1,41.65,96V63.42A21.77,21.77,0,0,1,63.36,41.71H96.61a21.77,21.77,0,0,1,21.71,21.71Z"/><circle class="cls-2" cx="102.02" cy="57.95" r="3.66"/></a></g></g></svg>
         <svg class="social-icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 160.3 160.3"><defs><style>.cls-1{fill:#cf828f;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Layer_2-2" data-name="Layer 2"><a xlink:href="https://twitter.com"><path class="cls-1" d="M80.15,0A80.15,80.15,0,1,0,160.3,80.15,80.14,80.14,0,0,0,80.15,0Zm43.9,58.09c-.49,31.15-13.44,53.16-38.48,66.3-22.41,9.82-41.69,5.8-59.26-5.78,13.54.88,24.47-2.14,32-10.3-9.25-.07-15.77-5.82-20-16.26,3.79.37,7.49.66,9.57-.72-10.46-4-16.9-11.36-17.16-23.85,3.47,2.25,6.67,3.13,9.57,2.53-8.87-9-12-19.43-6.5-32,9.54,12.83,26.21,23.41,46.43,25.11-4.88-24.21,20.23-39.93,38.48-22,6.19-1.64,11.59-3.5,14.27-6.14.18,4.05-4,8.54-9.58,13.18,4.8-.84,9.22-2,12.65-3.79C133.43,49.75,129,54.08,124.05,58.09Z"/></a></g></g></svg>
