--- a/work.html
+++ b/work.html
@@ -18,9 +18,9 @@
          </a>  <a id="top"></a>
          </svg>
          <div id="nav2">
-         <a href="index.html">Home</a>
-         <a href="info.html">Info</a>
-         <a class="active" href="work.html">Work</a>
+         <a href="https://malo0211.github.io/portfolio/index.html">Home</a>
+         <a href="https://malo0211.github.io/portfolio/info.html">Info</a>
+         <a class="active" href="https://malo0211.github.io/portfolio/work.html">Work</a>
          </div>
          </nav>
      </div>
@@ -28,34 +28,34 @@
         <h2>Portfolio</h2>
         <div class="grid-container2">
             <div class="grid-item2">
-                <img class="img" src="images/1.jpg" alt="ok">
+                <img class="img" src="images/1.jpg" alt="Top of a tree against the sky">
             </div>
             <div class="grid-item2"> 
-                <img class="img" src="images/6.jpg" alt="ok">
+                <img class="img" src="images/6.jpg" alt="puddle on pavement reflecting a traffic light">
             </div>
             <div class="grid-item2">
-                <img class="img" src="images/3.jpg" alt="ok">
+                <img class="img" src="images/3.jpg" alt="two screens showing the same image of tropical plants">
             </div>
             <div class="grid-item2">
-                <img class="img" src="images/7.jpg" alt="ok">
+                <img class="img" src="images/7.jpg" alt="top half of man on beach with cloudy sky">
             </div>
             <div class="grid-item2">
-                <img class="img" src="images/8.jpg" alt="ok">
+                <img class="img" src="images/8.jpg" alt="bowl of food with parmesan on wooden table">
             </div>
             <div class="grid-item2"> 
-                <img class="img" src="images/me10.jpg" alt="ok">
+                <img class="img" src="images/10.jpg" alt="tree in front of a lit up building in the fog at night">
             </div>
             <div class="grid-item2">
-                <img class="img" src="images/me11.jpg" alt="ok">
+                <img class="img" src="images/11.jpg" alt="van with flames painted on the front">
             </div>
             <div class="grid-item2">
-                <img class="img" src="images/me12.jpg" alt="ok">
+                <img class="img" src="images/5.jpg" alt="man in center walking on boardwalk towards beach">
             </div>
           </div>     
     </article>
     <div id="bottom-links">
-        <a class="hidden" href="/work.html">View More</a>
-        <a class="hidden" href="/info.html">Contact</a>
+        <a class="hidden" href="https://malo0211.github.io/portfolio/work.html">View More</a>
+        <a class="hidden" href="https://malo0211.github.io/portfolio/info.html">Contact</a>
         <a href="#top">Back to Top ^</a>
     </div>
     <footer>
