--- a/info.html
+++ b/info.html
@@ -85,7 +85,7 @@
 
     </div>
     <div id="bottom-links">
-        <a class="hidden" href="/work.html">View More</a>
+        <a class="hidden" href="https://malo0211.github.io/portfolio/work.html">View More</a>
         <a class="hidden" href="/info.html">Contact</a>
         <a href="#top">Back to Top ^</a>
     </div>
@@ -98,7 +98,7 @@
         <div id="footer-links">
             <a href="/index.html">Home</a>
             <a href="/info.html">Info</a>
-            <a href="/work.html">Work</a>
+            <a href="https://malo0211.github.io/portfolio/work.html">Work</a>
         </div>
         &copy; Malo 2022
     </footer>
