--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           </div>     
     </article>
     <div id="bottom-links">
-        <a class="hidden" href="/work.html">View More</a>
-        <a class="hidden" href="/info.html">Contact</a>
+        <a href="/work.html" class="hidden">View More</a>
+        <a href="/info.html" class="hidden">Contact</a>
         <a href="#top">Back to Top ^</a>
     </div>
     <footer>
