--- a/info.html
+++ b/info.html
@@ -85,8 +85,7 @@
 
     </div>
     <div id="bottom-links">
-        <a class="hidden" href="https://malo0211.github.io/portfolio/work.html">View More</a>
-        <a class="hidden" href="/info.html">Contact</a>
+        <a href="https://malo0211.github.io/portfolio/info.html" class="hidden">Contact</a>
         <a href="#top">Back to Top ^</a>
     </div>
     <footer>
@@ -96,8 +95,8 @@
         <svg class="social-icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 156.51 156.51"><defs><style>.cls-1{fill:#cf828f;}</style></defs><g  data-name="Layer 2"><g data-name="Layer 2"><a xlink:href="https://facebook.com"><path class="cls-1" d="M78.25,0a78.26,78.26,0,1,0,78.26,78.25A78.26,78.26,0,0,0,78.25,0Zm29.9,65.23-3,20.66H88.61l-.45,51.57-23.85-.23.45-50.88H46.14V64.54H65.22v-22C70,17.34,89,17.56,109.32,20.71l.19,18.62c-10.86-.52-20.65-.06-21.13,8.86v17Z"/></a></g></g></svg>
          </div>
         <div id="footer-links">
-            <a href="/index.html">Home</a>
-            <a href="/info.html">Info</a>
+            <a href="https://malo0211.github.io/portfolio/index.html">Home</a>
+            <a href="https://malo0211.github.io/portfolio/info.html">Info</a>
             <a href="https://malo0211.github.io/portfolio/work.html">Work</a>
         </div>
         &copy; Malo 2022
