--- a/info.html
+++ b/info.html
@@ -47,8 +47,8 @@
         images/me-desktop-1250px-2x.jpg 2x,
         images/me-desktop-1875px-3x.jpg 3x" src="images/me-desktop-1875px-3x.jpg" alt="designer profile black and white"> -->
            <div id="about-text">
-               <h1>About</h1>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam bibendum condimentum luctus. Fusce eu augue nec enim hendrerit fringilla eleifend id diam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam bibendum condimentum luctus. Fusce eu augue nec enim hendrerit fringilla eleifend id diam. </p>
+               <h1>Mary Maloney</h1>
+               <p>Hi! My name is Mary. A few favourites: Coffee. Restaurants. Hiking. Reading. Salt. The colour blue. I am a designer of many things - my interest lies in branding for small business. I work to make someone’s vision a reality. Look below to contact me and for the list of skills I offer.</p>
            </div>
     </div>
     <div class="info-grid">
