--- a/info.html
+++ b/info.html
@@ -100,7 +100,7 @@
          </form>
 
     </div>
-    <div id="bottom-links">
+    <div id="bottom-links1">
         <a href="#top">Back to Top ^</a>
     </div>
     <footer>
