--- a/work.html
+++ b/work.html
@@ -51,6 +51,9 @@
             <div class="grid-item2">
                 <img class="img" src="images/5.jpg" alt="man in center walking on boardwalk towards beach">
             </div>
+            <div class="grid-item2">
+                <img class="img" src="images/12.jpg" alt=" dark outlines of tree tops and stormy sky ">
+            </div>
           </div>     
     </article>
     <div id="bottom-links">
