--- a/info.html
+++ b/info.html
@@ -18,9 +18,9 @@
          </a><a id="top"></a>
          </svg>
          <div id="nav2">
-         <a href="index.html">Home</a>
-         <a class="active" href="info.html">Info</a>
-         <a href="work.html">Work</a>
+         <a href="https://malo0211.github.io/portfolio/index.html">Home</a>
+         <a class="active" href="https://malo0211.github.io/portfolio/info.html">Info</a>
+         <a href="https://malo0211.github.io/portfolio/work.html">Work</a>
          </div>
          </nav>
      </div>
