--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=krona+one">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=dm+sans">
     <title>Malo</title>
+    <link rel="icon" type="image/x-icon" href="/images/star.png">
 </head>
 <body>
     <div class="container">
@@ -48,16 +49,16 @@
         <h2>Portfolio</h2>
         <div class="grid-container">
             <div class="grid-item">
-                <img class="img" src="images/1.jpg" alt="ok">
+                <img class="img" src="images/1.jpg" alt="tree with rainbow in background">
             </div>
             <div class="grid-item"> 
-                <img class="img" src="images/6.jpg" alt="ok">
+                <img class="img" src="images/6.jpg" alt="puddle on pavement with reflection ">
             </div>
             <div class="grid-item">
-                <img class="img" src="images/3.jpg" alt="ok">
+                <img class="img" src="images/3.jpg" alt="two screens showing the same image of tropical plants">
             </div>
             <div class="grid-item">
-                <img class="img" src="images/9.jpg" alt="ok">
+                <img class="img" src="images/9.jpg" alt="textures: rock and wood on the beach">
             </div>
           </div>     
     </article>
