--- a/info.html
+++ b/info.html
@@ -48,7 +48,7 @@
         images/me-desktop-1875px-3x.jpg 3x" src="images/me-desktop-1875px-3x.jpg" alt="designer profile black and white"> -->
            <div id="about-text">
                <h1>Mary Maloney</h1>
-               <p>Hi! My name is Mary. A few favourites: Coffee. Restaurants. Hiking. Reading. Salt. The colour blue. I am a designer of many things - my interest lies in branding for small business. I work to make someone’s vision a reality. Look below to contact me and for the list of skills I offer.</p>
+               <p>Hi! My name is Mary. A bit about me: Coffee. Restaurants. Hiking. Reading. Salt. Blue. I am a designer of many things - my interest lies in branding for small business. I work to make someone’s vision a reality. Look below to contact me and for the list of skills I offer. This website is of course part of my portfolio, designed and coded from scratch by yours truly. </p>
            </div>
     </div>
     <div class="info-grid">
