--- a/work.html
+++ b/work.html
@@ -26,6 +26,7 @@
      </div>
      <article class="portfolio-grid2">
         <h2>Portfolio</h2>
+
         <div class="grid-container2">
             <div class="grid-item2">
                 <img class="img" src="images/1.jpg" alt="Top of a tree against the sky">
@@ -57,7 +58,7 @@
           </div>     
     </article>
     <div id="bottom-links">
-        <a class="hidden" href="https://malo0211.github.io/portfolio/info.html">Contact</a>
+        <a href="https://malo0211.github.io/portfolio/info.html">Next Page</a>
         <a href="#top">Back to Top ^</a>
     </div>
     <footer>
