last but not least

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=krona+one">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=dm+sans">
     <title>Malo</title>
-    <link rel="icon" type="image/x-icon" href="/images/star.png">
 </head>
 <body>
+    <!--- NAV -->
     <div class="container">
        <div>
         <nav id="nav">
@@ -25,6 +25,7 @@
         </div>
         </nav>
     </div>
+    <!-- main content -->
     <div id="main">
     <picture> 
         <source media="(min-width:1000px)" 
@@ -45,6 +46,7 @@
             <p>I am a designer that specializes in making your small business stand out. From Brand Identity, to User Experience Design, Web Design, Graphics, and Photography, I've got you covered. </p>
         </div>
     </div>
+       <!--- Portfolio -->
     <article class="portfolio-grid">
         <h2>Portfolio</h2>
         <div class="grid-container">
